use host network instead of service to receive udp messages

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -70,6 +70,7 @@ spec:
         volumeMounts:
         - name: secrets
           mountPath: /secrets
+      hostNetwork: true
       terminationGracePeriodSeconds: 300
       volumes:
       - name: secrets
