--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -10,7 +10,7 @@ version:
 
 stages:
   build:
-    image: golang:1.13.0-alpine3.10
+    image: golang:1.13.5-alpine3.11
     env:
       CGO_ENABLED: 0
       GOOS: linux
@@ -36,6 +36,20 @@ stages:
     path: ./publish
     copy:
     - /etc/ssl/certs/ca-certificates.crt
+
+  check-container:
+    parallelStages:
+      check-efficiency:
+        image: extensions/docker:stable
+        action: dive
+        repositories:
+        - jsalverda
+
+      vulnerability-scan:
+        image: extensions/docker:stable
+        action: trivy
+        repositories:
+        - jsalverda
 
   push-to-docker-hub:
     image: extensions/docker:stable
