use estafette foundation for json logging

--- a/helm/tp-link-hs110-bigquery-exporter/values.yaml
+++ b/helm/tp-link-hs110-bigquery-exporter/values.yaml
@@ -12,6 +12,8 @@ config:
 secret:
   gcpServiceAccountKeyfile: '{}'
 
+logFormat: json
+
 image:
   repository: jsalverda/tp-link-hs110-bigquery-exporter
   pullPolicy: IfNotPresent
